# Happle

./: CHANGELOG.md  Cargo.toml  MACOS_CONTROL_SPEC.md  PORTING.md  README.md  SECURITY.md
.github/workflows/: macos.yml  release-macos.yml  release.yml
docs/: getting-started.md  guide.md
mcpb/: manifest.json
skills/: hands-recommended-instructions.md  hands.md
skills/hands-getting-started/: SKILL.md
src/: atomic.rs  main.rs
src/meta/: capture.rs  click.rs  instrumentation.rs  mod.rs  network_subscribe.rs  script.rs  self_record.rs
src/plugin/: loader.rs  mod.rs  registry.rs
src/uia/: mod.rs
