[package]
name = "hands"
version = "1.3.4"
edition = "2021"
description = "Hands MCP server — browser automation + Windows UIA + vision/OCR."
license = "Apache-2.0"
repository = "https://github.com/AIWander/hands"
keywords = ["cpc", "mcp", "browser", "automation", "windows"]
categories = ["command-line-utilities", "development-tools", "web-programming"]

[[bin]]
name = "hands"
path = "src/main.rs"

[dependencies]
# MCP protocol + async
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
chrono = "0.4"

# Browser lib (CDP, scraping, smart_browse, etc.)
browser-mcp = { git = "https://github.com/AIWander/browser-mcp", tag = "v0.1.1" }

# Vision (shared library - screenshot, OCR, diff, template match)
vision-core = { git = "https://github.com/AIWander/vision-core", tag = "v0.1.0" }

# UIA (UI Automation - Windows native element inspection + input)
uia-mcp = { git = "https://github.com/AIWander/uia-mcp", tag = "v1.0.0" }

# Image processing (for PrintWindow capture)
image = "0.24"

# Base64 encoding (for file_upload tool)
base64 = "0.22"

# Regex for URL pattern detection in browser_learn_api
regex = "1"

# QR code decoding for TOTP 2FA registration
rqrr = { version = "0.7", default-features = false }

# Async utilities (catch_unwind for panic-safe meta-tool dispatch)
futures = "0.3"

# Path discovery (cpc-paths: resolve Volumes, install, backups paths)
cpc-paths = { git = "https://github.com/AIWander/cpc-paths", tag = "v0.1.0" }
tiny_http = "0.12"

[dev-dependencies]
tempfile = "3"

# Windows API for combo tools (drag, etc.)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_Storage_Xps",
]}
