[package]
name = "happle"
version = "0.1.0-alpha"
edition = "2021"
description = "Happle — macOS-native multi-layer desktop automation for AI agents. Apple port of AI-Hands (browser CDP + macOS Accessibility + vision/OCR)."
license = "Apache-2.0"
repository = "https://github.com/AIWander/Happle"
keywords = ["cpc", "mcp", "browser", "automation", "macos"]
categories = ["command-line-utilities", "development-tools", "web-programming"]

# ── PORT STATUS ──────────────────────────────────────────────────────────────
# Happle is the macOS/Apple-Silicon port of AI-Hands (github.com/AIWander/AI-Hands).
# This repo starts as a byte-for-byte clone of AI-Hands v1.0.1 (the Windows build)
# and is being modified until it runs natively on macOS. See PORTING.md for the
# full Windows→macOS mapping and checklist. The Windows build still compiles today;
# the macOS surgery (UIA → Accessibility AXUIElement, PrintWindow → CGWindowList,
# `windows` crate → objc2/cocoa) is tracked in PORTING.md.
# ─────────────────────────────────────────────────────────────────────────────

[[bin]]
name = "happle"
path = "src/main.rs"

[dependencies]
# MCP protocol + async
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
chrono = "0.4"

# Browser lib (CDP, scraping, smart_browse, etc.)
browser-mcp = { git = "https://github.com/AIWander/browser-mcp", tag = "v0.1.1" }

# Vision (shared library - screenshot, OCR, diff, template match)
vision-core = { git = "https://github.com/AIWander/vision-core", tag = "v0.2.0" }

# UIA (UI Automation - Windows native element inspection + input)
uia-mcp = { git = "https://github.com/AIWander/uia-mcp", tag = "v1.0.0" }

# Image processing (for PrintWindow capture)
image = "0.24"

# Base64 encoding (for file_upload tool)
base64 = "0.22"

# Regex for URL pattern detection in browser_learn_api
regex = "1"

# QR code decoding for TOTP 2FA registration
# v1.0.1 dep-bump: 0.7 → 0.10 to pull lru ^0.16 (GHSA-rhfx-m35p-ff5j, lru < 0.16.3)
rqrr = { version = "0.10", default-features = false }

# Async utilities (catch_unwind for panic-safe meta-tool dispatch)
futures = "0.3"

# Path discovery (cpc-paths: resolve Volumes, install, backups paths)
cpc-paths = { git = "https://github.com/AIWander/cpc-paths", tag = "v0.1.3" }
tiny_http = "0.12"

# Plugin C-FFI loader (Item 7 phase 2) — dynamic library loading + symbol resolution.
libloading = "0.8"

[dev-dependencies]
tempfile = "3"

# Windows API for combo tools (drag, etc.) — retained so the Windows build keeps
# compiling during the port. Remove once the macOS path is fully wired and Windows
# is no longer a Happle target (or keep for a true cross-platform single binary).
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_Storage_Xps",
]}

# ── macOS port target (PORTING.md) ───────────────────────────────────────────
# Uncomment + wire as the macOS accessibility / window / input layer lands.
# These replace the Windows `windows` crate + uia-mcp dependency on Apple.
# [target.'cfg(target_os = "macos")'.dependencies]
# objc2 = "0.5"                         # Objective-C runtime bindings
# objc2-app-kit = "0.2"                # NSWorkspace, NSRunningApplication, window mgmt
# objc2-foundation = "0.2"            # NSString, NSArray, NSDictionary bridging
# accessibility = "0.1"                # AXUIElement accessibility tree (UIA equivalent)
# accessibility-sys = "0.1"           # raw AX* FFI if the high-level crate is insufficient
# core-graphics = "0.23"              # CGWindowListCreateImage (PrintWindow equivalent)
# core-foundation = "0.9"             # CFType plumbing
# ─────────────────────────────────────────────────────────────────────────────
